--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-family: arial;
+  min-height: 100vh;
 }
 
 .coin-app {
   flex-wrap: nowrap;
   padding: 0 0 1rem 0;
-  margin: 2rem;
+  margin: 2rem 2rem 5rem 2rem;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -119,5 +120,55 @@ body {
   .table-coins {
     display: grid;
     grid-template-columns:  1fr;
+  }
+}
+
+@media (max-width: 590px) {
+
+  .coin-text {
+    font-size: 1.5rem;
+  }
+  .search-input {
+    width: 85%;
+  }
+  .coin img {
+    width: 1.8rem; 
+  }
+  .coin-row {
+    width: 17rem;
+  }
+  .coin-data {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 325px) {
+  .nav {
+    display: none;
+  }
+
+  .coin-text {
+    font-size: 1.3rem;
+  }
+  .search-input {
+    width: 90%;
+    padding: .6rem 1rem;
+  }
+
+  .coin {
+    font-size: 1rem;
+    flex-direction: column;
+  }
+  .coin-row {
+    width: 10rem;
+  }
+  .coin-data {
+    width: 8.5rem;
+    padding: .5rem;
+    font-size: .72rem;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
